fixed relative header spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -107,11 +107,11 @@ body {
   flex-direction: column;
 }
 
-#wells {
+#co2 {
   flex: 1;
 }
 
-#gas {
+#production {
   flex: 1;
 }
 
@@ -119,11 +119,11 @@ body {
   align-items: center;
 }
 
-#oil {
+#energy {
   flex: 1;
 }
 
-#water {
+#ratio {
   flex: 1;
 }
 
